# Homelab-Ansible

./: .gitignore  Makefile  README.md  SSH-SETUP.md  ansible.cfg  debug.yml  destroy.yml  galaxy.yml  handler.yml  inventory.yml  main.yml  prepare_ssd_media.yml  pyproject.toml  requirements.yml  test-ssh.yml  vars.example.yml  vars.yml  vault.example.yml
bash_scripts/: ansible-wrapper.sh  fix-docker-socket.sh  setup-ssh.sh  troubleshoot-ssh.sh  validate.sh
docs/: HTTPS_SETUP.md  MIGRATION_SWARM_TO_PORTAINER_FULL_TEARDOWN.md  MIGRATION_SWARM_TO_PORTAINER_ZERO_DOWNTIME.md  PIHOLE_RATE_LIMIT_INCIDENT.md  PIHOLE_REVERSE_DNS_INCIDENT.md  README.md  REFACTORING_PLAN.md  SSD_MEDIA_DRIVE_SETUP.md  SSH_SETUP.md
group_vars/: monolith.yml
host_vars/: lenovo_server.yml  pi4_01.yml
meta/: runtime.yml
playbooks/: debug.yml  destroy.yml  prepare_ssd_media.yml  site.yml  test-ssh.yml
playbooks/examples/: minimal-setup.yml  multi-node-homelab.yml  single-node.yml
roles/audiobookshelf/: QUICK_START.md  README.md
roles/common/: README.md
roles/dispatcharr/: QUICK_START.md  README.md
roles/docker/: README.md
roles/jellyctl/: QUICK_START.md  README.md
roles/jellyfin/: README.md
roles/jellyfin_config/: QUICK_START.md  README.md
roles/koffan_config/: QUICK_START.md  README.md
roles/nginx_proxy_manager_api/: IMPLEMENTATION_SUMMARY.md  MIGRATION.md  QUICK_START.md  README.md  vars.example.yml  vault.example.yml
roles/nginx_proxy_manager_config/: QUICK_START.md  README.md
roles/openvpn_config/: QUICK_START.md  README.md
roles/pihole_api/: QUICK_START.md  README.md
roles/pihole_config/: QUICK_START.md  README.md
roles/retroarch/: QUICK_START.md  README.md
roles/stack_deployer/: QUICK_START.md  (+1 more)
tasks/: cleanup.yml  deploy_stacks.yml  disable_resolved_stub.yml  docker.yml  initial_setup.yml  nfs_client.yml  nfs_server.yml  portainer.yml  portainer_agent.yml  post_setup.yml  post_setup_headscale.yml  post_setup_jellyfin.yml  post_setup_koffan.yml  post_setup_npm.yml  post_setup_open_webui.yml  post_setup_openvpn.yml  post_setup_pihole.yml  ssd_media_drive.yml
templates/: audiobookshelf-compose.yml.j2  bazarr-compose.yml.j2  dispatcharr-compose.yml.j2  headscale-compose.yml.j2  headscale-config.yaml.j2  heimdall-compose.yml.j2  jellyfin-compose.yml.j2  koffan-compose.yml.j2  npm-compose.yml.j2  ollama-compose.yml.j2  open-webui-compose.yml.j2  openvpn-compose.yml.j2  pihole-compose.yml.j2  portainer-agent-compose.yml.j2  portainer-compose.yml.j2  retroarch-compose.yml.j2
(+228 files in other folders)
